# tangram-unity

./: .gitignore  .travis.yml  CodeFormatting.mdpolicy  Doxyfile  LICENSE.md  MapStyleEditorDocumentation.md  README.md  appveyor.yml  circle.yml  package.json  tangram-unity.sln.DotSettings
.circleci/: config.yml
.travis/: build.sh  install.sh
Assets/: AsyncWorker.cs  Builder.cs  DefaultScene.unity  Earcut.cs  FeatureBehavior.cs  GameObjectOptions.cs  GeoJSON.cs  LightBlinkScript.cs  LightScript.cs  MapTile.cs  Mapzen.cs  Mapzen.prefab  MapzenMap.cs  MeshData.cs  New Post-Processing Profile.asset  PolygonBuilder.cs  RegionMap.cs  SceneGraph.cs  SimpleJSON.cs  ThirdPersonCamera.cs  TileData.cs  TileTask.cs  UnityIO.cs
Assets/Dependencies/Mapbox/: Earcut.cs  Mapbox.asmdef
Assets/Dependencies/SimpleJSON/: SimpleJSON.asmdef  SimpleJSON.cs
Assets/Editor/: BuilderEditor.cs  EditorBase.cs  EditorConfig.cs  EditorStyle.cs  EditorUtil.cs  FeatureFilterEditor.cs  FeatureLayerTreeView.cs  FeatureStyleEditor.cs  FilterStyleEditor.cs  FoldoutEditor.cs  IEditor.cs  LayerMatcherDrawer.cs  LayerStyleEditor.cs  MapStyleEditor.cs  MapzenMapEditor.cs  MapzenMapEditor.prefab  MatcherEditor.cs  ModelExporter.cs  PolygonBuilderEditor.cs  PolygonPolylineOptionsDrawer.cs  PolylineBuilderEditor.cs  StyleEditor.cs  TileDataEditor.cs
Assets/Game/: BallMaterial.physicMaterial
Assets/Game/Prefabs/: Main Camera.prefab  PostProcessProfile.asset  Sphere.prefab
Assets/Game/Scripts/: ChracterController.cs  ThirdPersonCamera.cs
Assets/Levels/: Concrete.mat  Manhattan.unity  ManhattanStyle.asset  bldg-1.mat  bldg-2.mat  bldg-3.mat  bldg-4.mat  bldg-5.mat  bldg-6.mat  landuse-1.mat  roof-2.mat  roof-3.mat  roof-4.mat  roof-5.mat  roof-6.mat  water-1.mat
Assets/Mapzen/: FeatureStyle.cs  Geo.cs  LngLat.cs  Mapzen.asmdef  MercatorMeters.cs  PolygonBuilder.cs  PolylineBuilder.cs  RegionScaleUnits.cs  SceneGroup.cs  SceneGroupType.cs  TileAddress.cs  TileArea.cs  TileBounds.cs  Util.cs
Assets/Mapzen/Editor/: BuilderEditor.cs  EditorBase.cs  EditorConfig.cs  FeatureStyleEditor.cs  FilterStyleEditor.cs  FoldoutEditor.cs  LayerStyleEditor.cs  MapzenMapEditor.cs  MatcherEditor.cs  StyleEditor.cs
Assets/Mapzen/Unity/: AsyncWorker.cs  IO.cs  (+19 more)
Assets/Nextzen/: Geo.cs  LngLat.cs  MercatorMeters.cs  SceneGroupType.cs  TileAddress.cs  TileBounds.cs  Util.cs
Assets/Resources/: Tile.prefab
Assets/Scenes/: Black.mat  Blue.mat  DefaultScene.unity  DefaultStyle.asset  ExampleMapStyle.asset  Green.mat  MapPhysicsMaterial.physicMaterial  New Map Style.asset  Red Lighter.mat  Red-Unlit.mat  Red.mat  RegionMapExample.unity  Road0.mat  Road1.mat  Roads.mat  Roads1.mat  Roads2.mat  SimpleMapStyle.asset  Terrain.mat  UVGrid.mat  White.mat
Documentation/: MapStyleEditor.md  RegionMapEditor.md
NativeCode/UnityNativePlugin/: Info.plist  UnityNativePlugin.cpp  UnityNativePlugin.hpp
NativeCode/UnityNativePlugin.xcodeproj/: project.pbxproj
NativePlugin/: .gitignore  CMakeLists.txt  Info.plist  README.md  settings.gradle  unity_earcut.cpp  unity_earcut.h
NativePlugin/code/: build.gradle  earcut.h  unity_earcut.cpp  unity_earcut.h
NativePlugin/earcut/: build.gradle  earcut.h  unity_earcut.cpp  unity_earcut.h
NativePlugin/earcut/src/main/: AndroidManifest.xml
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Runtime/: tangram-unity.asmdef
Runtime/Mapzen/: MercatorMeters.cs  TileBounds.cs
Runtime/Scenes/: Green Lighter.mat  Red.mat
(+126 files in other folders)
